v0.6.4    Fri, 26 Feb 2016 16:58:02 +0900
  - Use in-memory brain rather than local brain

v0.6.3    Fri, 26 Feb 2016 16:19:05 +0900
  - Save brain data explicitly for refresh room 
  - Brain 을 file 대신에 redis 에 저장

v0.6.2    Fri, 26 Feb 2016 12:03:54 +0900
  - 의류준비에서 상태가 변경되어도 정리가 필요한 탈의실 번호를 추적

v0.6.1    Thu, 25 Feb 2016 18:23:33 +0900
  - active 상태표시를 위한 API 변경
    + POST   /active?key=:key
    + DELETE /active/:order_id?key=:key
    - POST   /room
    - DELETE /room/:order_id
    - POST   /select
    - DELETE /select/:order_id
  - improve OpenCloset::Monitor::Plugin::Helpers doc
  - helper previous_order supports @status_in option
  - 의류준비중인 사용자 이름을 탈의실에 나타냄
  - 정리가 필요한 방의 표시 제거
  - 탈의실의 이전 사용자가 잘못 나타나는 버그 수정

v0.6.0    Wed, 24 Feb 2016 18:31:47 +0900
  - 좀 더 편리한 우클릭 메뉴의 제안
  - 정리가 필요한 탈의실에 아이콘을 보여줌

v0.5.8    Fri, 05 Feb 2016 12:08:46 +0900
  - Allow cors to get target date

v0.5.7    Fri, 05 Feb 2016 11:22:11 +0900
  - opencloset.css 적용
  - Rename OpenCloset::Plugin::Helpers OpenCloset::Monitor::Plugin::Helpers
  - Add route 'GET /target_date.json'

v0.5.6    Thu, 28 Jan 2016 15:28:44 +0900
  - 일요일/공휴일에 대한 반납 문구 삭제

v0.5.5    Thu, 28 Jan 2016 15:03:04 +0900
  - 수선의 대기목록을 의류준비에서도 활용

v0.5.4    Sun, 17 Jan 2016 13:59:22 +0900
  - 포장 -> 포장중으로 라벨 변경

v0.5.3    Wed, 13 Jan 2016 08:35:55 +0900
  - 대여, 반납일에 local timezone 적용
  - opencloset.css bower package 를 사용

v0.5.2    Thu, 17 Dec 2015 16:54:50 +0900
  - font++ @dashboard

v0.5.1    Thu, 17 Dec 2015 10:30:07 +0900
  - 대쉬보드의 반납일을 지정

v0.5.0    Wed, 16 Dec 2015 18:32:38 +0900
  - front-end 리소스를 AssetPack 에서 Grunt 관리
  - 수선의 스크립트 오류 수정
  - 최근대여의류의 베스트핏 표시
  - Add online sms macro text

v0.4.7    Wed, 16 Dec 2015 04:46:33 +0900
  - 대쉬보드 하단안내 글자 size++
  - 온라인 대쉬보드의 사용자이름에 시간표 링크 추가

v0.4.6    Mon, 14 Dec 2015 18:53:11 +0900
  - 수선화면에서 '포장완료' 상태를 '포장' 상태로 처리
  - 준비화면에서 주문서에 pants 가 없으면 사용자의 pants 를 보여줌
  - whiltelist 를 위해 좀 더 자세한 remote addr 을 얻어냄
  - 대쉬보드에 반납안내문구 추가
  - 궁서체를 사용하지 않음
