@@ -1,3 +1,5 @@
+  - hook 을 추가해서 worker 별 brain 의 동시성 문제해결
+
 v0.6.4    Fri, 26 Feb 2016 16:58:02 +0900
   - Use in-memory brain rather than local brain
 
